--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>PK237 LPDP</title>
-	<link href="dist/output.css" rel="stylesheet" />
-</head>
-<body>
-	<h1>Hello World</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PK237 LPDP</title>
+    <link href="dist/output.css" rel="stylesheet" />
+  </head>
+  <body>
+    <h1 class="text-lg">Hello World</h1>
+
+    <div class="flex h-40 w-40 justify-center items-center bg-blue-400">
+      <span class="text-white">Center</span>
+    </div>
+  </body>
 </html>
