feat: add navbar and jumbotron (temp)

--- a/index.html
+++ b/index.html
@@ -1,16 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PK237 LPDP</title>
-    <link href="dist/output.css" rel="stylesheet" />
-  </head>
-  <body>
-    <h1 class="text-lg">Hello World</h1>
 
-    <div class="flex h-40 w-40 justify-center items-center bg-blue-400">
-      <span class="text-white">Center</span>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PK237 LPDP</title>
+  <link href="dist/output.css" rel="stylesheet" />
+
+  <!-- Font Family -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <header class="bg-gray-500">
+    <div class="container mx-auto flex justify-between items-center py-2">
+      <!-- Logo -->
+      <div>
+        <img src="./assets/logo/logo.svg" class="h-16" alt="">
+      </div>
+
+      <div>
+        <img src="./assets/logo/lpdp-logo.svg" class="h-16" alt="">
+      </div>
     </div>
-  </body>
+
+
+  </header>
+  <main>
+    <section class="h-screen">
+      <div class=" h-full mx-auto">
+
+        <div class="relative w-full h-full">
+          <div class="absolute inset-0 w-full-h-full bg-white bg-opacity-50 -z-10"></div>
+          <img src="./assets/img/background.png" alt="" class="absolute -z-20 w-full positio">
+          <div class=" py-20 mx-20 leading-10">
+            <h3 class="text-shadow-hero-lg text-2xl font-extrabold sm:text-3xl md:mb-1 md:text-4xl lg:mb-2 lg:text-9xl">
+              SAIL TO THE <br>SEA OF US<span class="text-red-500">.</span>
+            </h3>
+          </div>
+        </div>
+    </section>
+    <section class="bg-green-300 h-screen">
+
+    </section>
+  </main>
+  <footer>
+
+  </footer>
+</body>
+
 </html>
