--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <header class="bg-gray-500">
+  <header class="">
     <div class="container mx-auto flex justify-between items-center py-2">
       <!-- Logo -->
       <div>
