fix: font family in input.css, feat: logo section, change bg in jumbotron section

--- a/index.html
+++ b/index.html
@@ -37,17 +37,28 @@
 
         <div class="relative w-full h-full">
           <!-- <div class="absolute inset-0 w-full-h-full bg-white bg-opacity-50 -z-10"></div> -->
-          <img src="./assets/img/sea.jpg" alt="" class="absolute -z-20 h-full w-full object-cover">
+          <img src="./assets/img/sea.svg" alt="" class="absolute -z-20 h-full w-full object-cover">
           <div class="ml-20 leading-10 flex flex-col justify-center h-full relative">
             <h3 class="text-shadow-hero-lg text-[#30608F] text-2xl font-extrabold sm:text-3xl md:mb-1 md:text-4xl lg:mb-2 lg:text-9xl">
               SAIL TO THE <br>SEA OF US<img src="./assets/img/wave-icon.png" class="h-12 inline-block" alt="">
             </h3>
-						<img src="/assets/maskot/citra-lakshya.png" class="w-1/2 absolute right-0 -bottom-20 animate-wave" alt="">
+						<img src="/assets/maskot/citra-lakshya.png" class="w-1/2 absolute right-0 bottom-0 lg:-bottom-20 animate-wave" alt="">
           </div>
         </div>
     </section>
-    <section class="bg-green-300 h-screen">
-
+    <section class="h-screen">
+    <div class="bg-cover bg-[url('/assets/img/sea.jpg')] bg-bottom text-transparent p-0 [background-clip:text]">
+        <h2 class="text-3xl lg:text-8xl text-center pt-8 lg:pt-16 lg:pb-8 font-bold">SEASCAPED PHILOSOPHY</h2>
+      </div>
+      <div class="flex flex-col lg:flex-row lg:w-10/12 mx-auto lg:pt-12">
+        <div class="flex justify-center lg:w-5/12">
+          <img src="./assets/logo/mercusuar.png" class="h-96 my-12 lg:my-0" alt="">
+        </div>
+        <div class="px-4 font-medium lg:w-7/12 lg:text-[22px]">
+          <p class="mb-4">Mercusuar dan sinarnya diibaratkan sebagai simbol kekuatan dan harapan bagi setiap peserta PK-237. Ombak di lautan mewakili tantangan dan kesulitan yang harus dihadapi dalam perjuangan menempuh studi dan berkontribusi.</p>
+          <p>Mercusuar akan hadir berdiri tegak dan kokoh di tengah gelapnya lautan dan ganasnya ombak. Mercusuar akan menyinari kapal-kapal di lautan layaknya kekuatan dan harapan pada diri setiap Awardee LPDP PK-237 dalam mewujudkan mimpi-mimpi, yang akan menyinari Indonesia menuju negara maju dan makmur.</p>      
+        </div>
+      </div>
     </section>
 
 		<section class="bg-blue-300 h-screen">
