feat: fix screen

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
     </header>
     <main>
-      <section class="h-screen">
+      <section class="h-[90vh] sm:h-screen">
         <div class=" h-full mx-auto">
           <div class="relative w-full h-full">
             <!-- <div class="absolute inset-0 w-full-h-full bg-white bg-opacity-50 -z-10"></div> -->
