feat: fix some style and padding and margin

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
 	<!-- Flipbook StyleSheet -->
-  <link href="assets/vendor/dflip/css/dflip.min.css" rel="stylesheet" type="text/css">
-  <link href="assets/vendor/dflip/css/themify-icons.min.css" rel="stylesheet" type="text/css">
-
+	<link href="assets/vendor/dflip/css/dflip.min.css" rel="stylesheet" type="text/css">
+	<link href="assets/vendor/dflip/css/themify-icons.min.css" rel="stylesheet" type="text/css">
 	<link
 		href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
 		rel="stylesheet" />
@@ -62,7 +61,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="lg:mb-32">
+		<section class="mb-16 lg:mb-32">
 			<div class="bg-cover bg-[url('/assets/img/sea.jpg')] bg-bottom text-transparent p-0 [background-clip:text]">
 				<h2 class="text-3xl lg:text-8xl text-center pt-8 lg:pt-16 lg:pb-8 font-bold uppercase">SEASCAPED
 					PHILOSOPHY</h2>
@@ -91,7 +90,7 @@
 			</div>
 			<div class="flex flex-col lg:flex-row lg:w-10/12 mx-auto lg:pt-12">
 				<div class="lg:order-2 flex justify-center lg:w-5/12">
-					<img src="./assets/maskot/citra-lakshya_2.png" class="h-60 lg:h-96 my-6 lg:my-0" alt="" />
+					<img src="./assets/maskot/citra-lakshya_2.png" class="h-72 lg:h-[30rem] lg:-translate-y-10 my-6 lg:my-0" alt="" />
 				</div>
 				<div class="lg:order-1 px-4 lg:px-0 font-medium lg:w-7/12 lg:text-[22px] lg:text-right">
 					<p class="mb-4">
@@ -109,40 +108,40 @@
 				</div>
 			</div>
 		</section>
-		<section class="h-screen">
+		<section class="md:h-auto h-screen">
 			<div class="relative h-full w-full">
 				<div class="absolute h-full w-full -z-10">
 					<img src="./assets/img/deepsea.jpg" alt="" class="object-cover h-full w-full brightness-[.35]">
 				</div>
 				<div class="p-0 text-white">
-					<h2 class="text-3xl lg:text-8xl text-center pt-8 lg:pt-16 lg:pb-16 font-bold uppercase">Meet the
+					<h2 class="text-3xl lg:text-8xl text-center py-12 lg:py-16 font-bold uppercase">Meet the
 						Sailor</h2>
 				</div>
 				<div class="w-full relative lg:w-8/12 mx-auto">
 					<div class="owl-carousel owl-theme" id="representatives">
 						<div class="item">
-							<img src="./assets/representatives/1.png" alt="" class="h-48 lg:h-96 object-contain">
+							<img src="./assets/representatives/1.png" alt="" class="h-60 lg:h-96 object-contain">
 							<div class="text-center text-white text-sm lg:text-lg">
 								<span class="block font-semibold">Ketua Angkatan</span>
 								<span class="block">Siwi Mauliddia Handayani</span>
 							</div>
 						</div>
 						<div class="item">
-							<img src="./assets/representatives/2.png" alt="" class="h-48 lg:h-96 object-contain">
+							<img src="./assets/representatives/2.png" alt="" class="h-60 lg:h-96 object-contain">
 							<div class="text-center text-white text-sm lg:text-lg">
 								<span class="block font-semibold">Koor. Administrasi dan Database</span>
 								<span class="block">Putri Shania Noor</span>
 							</div>
 						</div>
 						<div class="item">
-							<img src="./assets/representatives/3.png" alt="" class="h-48 lg:h-96 object-contain">
+							<img src="./assets/representatives/3.png" alt="" class="h-60 lg:h-96 object-contain">
 							<div class="text-center text-white text-sm lg:text-lg">
 								<span class="block font-semibold">Koor. Program dan Humas</span>
 								<span class="block">Protasius D. P. B. Isyudanto</span>
 							</div>
 						</div>
 						<div class="item">
-							<img src="./assets/representatives/2.png" alt="" class="h-48 lg:h-96 object-contain">
+							<img src="./assets/representatives/2.png" alt="" class="h-60 lg:h-96 object-contain">
 						</div>
 					</div>
 				</div>
@@ -150,10 +149,10 @@
 			</div>
 		</section>
 		<section class="h-screen">
-			<div class="h-full w-full">
+			<div class="w-full">
 				<div class="bg-gradient-to-b from-[#00171e] to-black h-full w-full absolute -z-10"></div>
-				<div class="p-0 text-white	">
-					<h2 class="text-3xl lg:text-8xl text-center pt-8 lg:pt-16 lg:pb-8 font-bold glow">TREASURE MAP</h2>
+				<div class="p-0 text-white pt-32">
+					<h2 class="text-3xl lg:text-8xl text-center pb-8  lg:pb-12 font-bold glow">TREASURE MAP</h2>
 				</div>
 				<div id="demografi" class="w-full"></div>
 			</div>
@@ -161,8 +160,9 @@
 
 		<section class="lg:mb-32 h-screen">
 			<div class="bg-cover bg-[url('/assets/img/sea.jpg')] bg-bottom text-transparent p-0 [background-clip:text]">
-				<h2 class="text-3xl lg:text-8xl text-center pt-8 lg:pt-16 lg:pb-8 font-bold uppercase">COMMUNITY
-					GATHERING</h2>
+				<h2 class="text-3xl lg:text-8xl text-center pt-8 lg:pt-16 lg:pb-8 font-bold uppercase">
+					COMMUNITY GATHERING
+				</h2>
 			</div>
 
 			<div class="w-full lg:w-8/12 mx-auto">
@@ -212,30 +212,31 @@
 				</div>
 			</div>
 		</section>
-		<section>
-			<div class="relative h-full w-full">
-				<div class="absolute h-full w-full -z-10">
-					<img src="./assets/img/deepsea.jpg" alt="" class="object-cover h-full w-full brightness-[.35]">
-				</div>
-				<div class="p-0 text-white">
-					<h2 class="text-3xl lg:text-8xl text-center pt-8 lg:pt-16 lg:pb-16 font-bold uppercase">Overview</h2>
-				</div>
+	</main>
+	<section>
+		<div class="relative h-full w-full">
+			<div class="absolute h-full w-full -z-10">
+				<img src="./assets/img/deepsea.jpg" alt="" class="object-cover h-full w-full brightness-[.35]">
+			</div>
+			<div class="p-0 text-white">
+				<h2 class="text-3xl lg:text-8xl text-center pt-8 lg:pt-16 lg:pb-16 font-bold uppercase">Overview</h2>
+			</div>
 
-				<div class="pb-20">
-					<div class="_df_book !bg-transparent" height="500" webgl="true" scrollWheel="false"
-									source="assets/pdf/Selayang Pandang PK 209.pdf"
-									id="df_manual_book">
-					</div>
+			<div class="pb-20">
+				<div class="_df_book !bg-transparent" height="500" webgl="true" scrollWheel="false"
+								source="assets/pdf/Selayang Pandang PK 209.pdf"
+								id="df_manual_book">
 				</div>
 			</div>
-		</section>
-	</main>
-	<footer class="text-center p-4 bg-black text-slate-100">Copyright &copy Angkatan PK-237 LPDP</footer>
+		</div>
+	</section>
+</main>
+<footer class="text-center p-4 bg-black text-slate-100">Copyright &copy Angkatan PK-237 LPDP</footer>
 
 	<script src="./dist/vendor/jquery/jquery.min.js"></script>
 	<script src="./dist/vendor/owlcarousel/js/owl.carousel.min.js"></script>
 	<script src="./assets/vendor/dflip/js/dflip.min.js" type="text/javascript"></script>
-	<script>
+<script>
 		$('#representatives').owlCarousel({
 			center: true,
 			loop: true,
@@ -312,7 +313,7 @@
 						text: ''
 					},
 					mapNavigation: {
-						enabled: false,
+						enabled: true,
 						buttonOptions: {
 							verticalAlign: 'bottom'
 						}
